# sshpanel

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  roadmap.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
backend/: main.py
backend/agent/: __init__.py  classify_command.py  guardrails.py  mcp_server.py  pty_bridge.py  runtime.py
backend/api/: agent.py  compose.py  docker_api.py  hosts.py  keys.py  overview.py  system.py  terminal.py
backend/core/: config.py  crypto.py  docker.py  keys.py  ssh.py  system.py
backend/db/: database.py  models.py
cli/: main.py
scripts/: install.sh
sidecar/: build_sidecar.py  entrypoint.py
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  vite-env.d.ts
web/src-tauri/: .gitignore  Cargo.toml  tauri.bundle.json  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
web/src/components/: AboutPanel.tsx  AddHostModal.tsx  AgentPanel.tsx  CommandPalette.tsx  ComposePanel.tsx  ConfigDialog.tsx  ContainerLogs.tsx  ContainersPanel.tsx  EmptyState.tsx  ExecResultModal.tsx  HostAvatar.tsx  HostDetail.tsx  InstallDockerModal.tsx  OverviewPanel.tsx  SSHKeysModal.tsx  SSHTerminal.tsx  Sidebar.tsx  Sparkline.tsx  SystemPanel.tsx  TerminalWorkspace.tsx  UpdateBanner.tsx
web/src/lib/: api.ts  hooks.ts  latencyStore.ts  updater.ts  utils.ts
