[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "sshpanel"
version = "0.2.0"
description = "Open-source SSH & Docker manager — web, desktop and CLI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "asyncssh>=2.14.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
sshpanel = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "cli*"]
